# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: main.py
