[tool.poetry]
name = "shun-hooks"
version = "0.1.0"
description = "shun hooks for pre-commit"
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
license = "MIT"
packages = [
  { include = "hooks" }
]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
autoflake = "^1.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
echo = "hooks.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
